--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-  <types>
-    <members>*</members>
-    <name>ApexClass</name>
-  </types>
+    <types>
+        <members>ProductLineItemManager</members>
+        <members>ProductLineItemManagerTest</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>LineItemTrigger</members>
+        <name>ApexTrigger</name>
+    </types>
+    <types>
+        <members>Line_Item__c</members>
+        <members>Product_Line_Item__c</members>
+        <name>CustomObject</name>
+    </types>
+    <version>45.0</version>
 </Package>
